# art-gallery-ghost

./: CMakeLists.txt  LICENSE.txt  README.md  art-gallery-ghost.sln  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: vcpp-vcpkg.yml
art-gallery-ghost/: Collision.cpp  Collision.hpp  Component.hpp  Controller.cpp  Controller.hpp  FlashLight.cpp  FlashLight.hpp  Game.cpp  Game.hpp  Gun.cpp  Gun.hpp  Map.cpp  Map.hpp  Movement.hpp  Object.hpp  Player.cpp  Player.hpp  Render.cpp  Render.hpp  art-gallery-ghost.vcxproj  art-gallery-ghost.vcxproj.filters  main.cpp
src/: Game.cpp  Game.hpp  Map.cpp  Map.hpp  Object.hpp  Player.cpp  Player.hpp
src/engine/: Controller.cpp  Controller.hpp  Game.cpp  Game.hpp  Object.hpp
